# followme_laser

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  mainpage.dox  package.xml
cmake/: CMakeLists_catkin.txt  CMakeLists_rosmake.txt  manifest.xml  package.xml  package2catkin.bash  package2rosmake.bash
config/: cave.world  followme_laser.rviz  stage_includes.inc
include/: svn_vision_utils.bash
include/followme_laser/: goal_dynamic_window_tracker.h  laser_blob_tracker.h  ros_goal_dynamic_window_tracker.h  ros_utils.h  timer.h  utils.h
launch/: follow_simple.launch  stage_follow.launch
msg/: TrackingStatus.msg
src/: ros_goal_dynamic_window_tracker.cpp  ros_laser_blob_tracker.cpp
test/: gtest_goal_dynamic_window_tracker.cpp  test_goal_dynamic_window_tracker.cpp
