<?xml version="1.0"?>
<package format="2">
  <name>followme_laser</name>
  <version>0.0.0</version>
  <description>
    followme_laser is used to follow a moving goal.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_utils</depend>
  <export>
    <cpp cflags="-I${prefix} -I${prefix}/build"
         lflags="-lim -L${prefix}/lib -Wl,-rpath,${prefix}/lib" />
  </export>
</package>
